Closed Bug 377831 Opened 18 years ago Closed 18 years ago

Mingw build error: error: conflicting types for JS_TraceChildren

Categories

(Core :: JavaScript Engine, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: martijn.martijn, Unassigned)

References

Details

Attachments

(1 file)

Attached patch patch?Splinter Review
After updating my build, I'm getting this error in my mingw build environment: lude/nspr -DMOZ_PNG_READ -DPNG_NO_MMX_CODE -DMOZ_PNG_WRITE -I../../dist/sdk/in clude -I/cygdrive/c/mozilla/mozilla/js/src -Wall -W -Wno-unused -Wpointer-a rith -Wcast-align -Wno-long-long -pedantic -mms-bitfields -pipe -DDEBUG -D_DEBU G -DDEBUG_mw -DTRACING -g -include ../../mozilla-config.h -DMOZILLA_CLIENT /cy gdrive/c/mozilla/mozilla/js/src/jsgc.c c:/mozilla/mozilla/js/src/jsgc.c:2171: error: conflicting types for 'JS_TraceChi ldren' c:/mozilla/mozilla/js/src/jsapi.h:1010: error: previous declaration of 'JS_Trace Children' was here c:/mozilla/mozilla/js/src/jsgc.c:2171: error: conflicting types for 'JS_TraceChi ldren' c:/mozilla/mozilla/js/src/jsapi.h:1010: error: previous declaration of 'JS_Trace Children' was here make[4]: *** [jsgc.o] Error 1 make[4]: Leaving directory `/cygdrive/c/mozilla/mozilla/js/src' make[3]: *** [libs_tier_js] Error 2 make[3]: Leaving directory `/cygdrive/c/mozilla/mozilla' make[2]: *** [tier_js] Error 2 make[2]: Leaving directory `/cygdrive/c/mozilla/mozilla' make[1]: *** [alldep] Error 2 make[1]: Leaving directory `/cygdrive/c/mozilla/mozilla' make: *** [alldep] Error 2 The attached patch fixes the build error for me, I have no idea if it's correct.
Comment on attachment 261904 [details] [diff] [review] patch? This is correct patch.
Attachment #261904 - Flags: review+
I committed the patch from comment 0 to the trunk: Checking in jsapi.h; /cvsroot/mozilla/js/src/jsapi.h,v <-- jsapi.h new revision: 3.145; previous revision: 3.144 done
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Thanks for checking in, Igor.
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: