Bug 377831: patch from Martijn Wargers <martijn.martijn@gmail.com> to fix JS_TraceChildren declarataion. r=myself